--- a/index.html
+++ b/index.html
@@ -5,126 +5,138 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Photon by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
 
-		<!-- Header -->
-			<section id="header">
-				<div class="inner">
-					<span class="icon solid major fa-cloud"></span>
-					<h1>Hi, I'm <strong>Photon</strong>, another fine<br />
-					little freebie from <a href="http://html5up.net">HTML5 UP</a>.</h1>
-					<p>Accumsan feugiat mi commodo erat lorem ipsum, sed magna<br />
-					lobortis feugiat sapien sed etiam volutpat accumsan.</p>
-					<ul class="actions special">
-						<li><a href="#one" class="button scrolly">Discover</a></li>
+<head>
+	<title>網路程式設計作業1012</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+</head>
+
+<body class="is-preload">
+
+	<!-- Header -->
+	<section id="header">
+		<div class="inner">
+			<span class="icon solid major fa-cloud"></span>
+			<h1>大家好 ! 我是<strong>廖則宇</strong><br />目前就讀
+				<a href="https://www.tku.edu.tw/">淡江大學</a>.
+			</h1>
+			<p>科系: 資管系<br />
+				大學: 三年級</p>
+			<ul class="actions special">
+				<li><a href="#one" class="button scrolly">點我下滑</a></li>
+			</ul>
+		</div>
+	</section>
+
+	<!-- One -->
+	<section id="one" class="main style1">
+		<div class="container">
+			<div class="row gtr-150">
+				<div class="col-6 col-12-medium">
+					<header class="major">
+						<h2>畢業於<br />
+							竹南高中</h2>
+					</header>
+					<p>國立竹南高級中學（英語：National Chunan Senior High
+						School），簡稱竹南高中、南中，成立於1952年，是一所位於苗栗縣竹南鎮的綜合型高級中等學校，設有普通科及化工科。</p>
+				</div>
+				<div class="col-6 col-12-medium imp-medium">
+					<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- Two -->
+	<section id="two" class="main style2">
+		<div class="container">
+			<div class="row gtr-150">
+				<div class="col-6 col-12-medium">
+					<ul class="major-icons">
+						<li><span class="icon solid style1 major fa-music"></span></li>
+						<li><span class="icon solid style2 major fa-heart"></span></li>
+						<li><span class="icon solid style3 major fa-camera-retro"></span></li>
+						<li><span class="icon solid style4 major fa-laptop-code"></span></li>
+						<li><span class="icon solid style5 major fa-book"></span></li>
+						<li><span class="icon solid style6 major fa-running"></span></li>
 					</ul>
 				</div>
-			</section>
-
-		<!-- One -->
-			<section id="one" class="main style1">
-				<div class="container">
-					<div class="row gtr-150">
-						<div class="col-6 col-12-medium">
-							<header class="major">
-								<h2>Lorem ipsum dolor adipiscing<br />
-								amet dolor consequat</h2>
-							</header>
-							<p>Adipiscing a commodo ante nunc accumsan et interdum mi ante adipiscing. A nunc lobortis non nisl amet vis sed volutpat aclacus nascetur ac non. Lorem curae et ante amet sapien sed tempus adipiscing id accumsan.</p>
-						</div>
-						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
-						</div>
-					</div>
-				</div>
-			</section>
-
-		<!-- Two -->
-			<section id="two" class="main style2">
-				<div class="container">
-					<div class="row gtr-150">
-						<div class="col-6 col-12-medium">
-							<ul class="major-icons">
-								<li><span class="icon solid style1 major fa-code"></span></li>
-								<li><span class="icon solid style2 major fa-bolt"></span></li>
-								<li><span class="icon solid style3 major fa-camera-retro"></span></li>
-								<li><span class="icon solid style4 major fa-cog"></span></li>
-								<li><span class="icon solid style5 major fa-desktop"></span></li>
-								<li><span class="icon solid style6 major fa-calendar"></span></li>
-							</ul>
-						</div>
-						<div class="col-6 col-12-medium">
-							<header class="major">
-								<h2>Lorem ipsum dolor adipiscing<br />
-								amet dolor consequat</h2>
-							</header>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
-							<p>Blandit faucibus proin. Ac aliquam integer adipiscing enim non praesent vis commodo nunc phasellus cubilia ac risus accumsan. Accumsan blandit. Lobortis phasellus non lobortis dit varius mi varius accumsan lobortis. Blandit ante aliquam lacinia lorem lobortis semper morbi col faucibus vitae integer placerat accumsan orci eu mi odio tempus adipiscing adipiscing adipiscing curae consequat feugiat etiam dolore.</p>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
-						</div>
-					</div>
-				</div>
-			</section>
-
-		<!-- Three -->
-			<section id="three" class="main style1 special">
-				<div class="container">
+				<div class="col-6 col-12-medium">
 					<header class="major">
-						<h2>Adipiscing amet consequat</h2>
+						<h2>關於我
+						</h2>
 					</header>
-					<p>Ante nunc accumsan et aclacus nascetur ac ante amet sapien sed.</p>
-					<div class="row gtr-150">
-						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
-							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
-							</ul>
-						</div>
-						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
-							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
-							</ul>
-						</div>
-						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
-							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</section>
+					<p>我是一個喜歡在午後或夜晚靜靜地聽音樂的人，享受著屬於自己的獨處時光。與此同時，我也非常喜愛和小動物相處，特別是可愛的貓咪，總想著有一天能夠擁有自己的貓，陪我度過每一個溫暖的時刻
 
-		<!-- Four -->
-			<section id="four" class="main style2 special">
-				<div class="container">
-					<header class="major">
-						<h2>Ipsum feugiat consequat?</h2>
-					</header>
-					<p>Sed lacus nascetur ac ante amet sapien.</p>
+					<p>在生活中，我習慣將每一個美麗的瞬間記錄下來，無論是熱氣騰騰的拉麵，還是日落時分的餘暉，都讓我覺得值得留住。這些小小的日常，總能為我帶來滿足感
+					<p>
+
+						我對資訊科技領域充滿了興趣，正在努力學習相關知識，希望未來能夠更深入地了解這個充滿創造力的世界
+					<p>從國小開始，就染上了閱讀，慢慢地沉浸在書中的世界裡，享受書本帶來的奇妙旅程
+
+					<p>當天氣好的時候，我和好朋友們會一起去打球，在球場上賴上一整個下午，享受運動帶來的快樂與活力。</p>
+
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- Three -->
+	<section id="three" class="main style1 special">
+		<div class="container">
+			<header class="major">
+				<h2>休閒活動</h2>
+			</header>
+			<p>無聊的時候會做的事情</p>
+			<div class="row gtr-150">
+				<div class="col-4 col-12-medium">
+					<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
+					<h3>傳說對決</h3>
+					<p>從國中開始玩最多的手游，一款5V5的團隊競技型遊戲，因為它我結交了很多朋友</p>
 					<ul class="actions special">
-						<li><a href="#" class="button wide primary">Sign Up</a></li>
-						<li><a href="#" class="button wide">Learn More</a></li>
+						<li><a href="#" class="button">回頂部</a></li>
 					</ul>
 				</div>
-			</section>
+				<div class="col-4 col-12-medium">
+					<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
+					<h3>永恆輪迴</h3>
+					<p>最近被燒到PC遊戲，玩法是大逃殺加上MOBA類的遊戲，有興趣可以一起來玩</p>
+					<ul class="actions special">
+						<li><a href="#" class="button">回頂部</a></li>
+					</ul>
+				</div>
+				<div class="col-4 col-12-medium">
+					<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+					<h3>網路小說</h3>
+					<p>沒有時間去圖書館時，會在網路上找找有沒有沒看過的寶藏小說</p>
+					<ul class="actions special">
+						<li><a href="#" class="button">回頂部</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
 
-		<!-- Five -->
-		<!--
+	<!-- Four -->
+	<section id="four" class="main style2 special">
+		<div class="container">
+			<header class="major">
+				<h2>作業連結</h2>
+			</header>
+			<p>Hello & About</p>
+			<H2><a href="https://github.com/nelson0715/113--TKU-Web/blob/main/hello.html"target="_blank" rel="noopener noreferrer">Hello </a><br />
+				<a href="https://github.com/nelson0715/113--TKU-Web/blob/main/about.html"target="_blank" rel="noopener noreferrer">About</a>
+			</H2>
+		</div>
+	</section>
+
+	<!-- Five -->
+	<!--
 			<section id="five" class="main style1">
 				<div class="container">
 					<header class="major special">
@@ -441,27 +453,27 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			</section>
 		-->
 
-		<!-- Footer -->
-			<section id="footer">
-				<ul class="icons">
-					<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-				</ul>
-				<ul class="copyright">
-					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-				</ul>
-			</section>
+	<!-- Footer -->
+	<section id="footer">
+		<ul class="icons">
+			<li><a href="https://www.facebook.com/profile.php?id=100000571023049&locale=zh_TW" class="icon brands alt fa-facebook-f" target="_blank" rel="noopener noreferrer"><span class="label">Facebook</span></a></li>
+			<li><a href="https://www.instagram.com/nelsonzeyu/" class="icon brands alt fa-instagram" target="_blank" rel="noopener noreferrer"><span class="label">Instagram</span></a></li>
+			<li><a href="https://github.com/nelson0715/113--TKU-Web" class="icon brands alt fa-github" target="_blank" rel="noopener noreferrer"><span class="label">GitHub</span></a></li>
+			<li><a href="mailto:411630543@o365.tku.edu.tw" class="icon solid alt fa-envelope" target="_blank" rel="noopener noreferrer"><span class="label">Email</span></a></li>
+		</ul>
+		<ul class="copyright">
+			<li>範本來源: <a href="http://html5up.net">HTML5 UP</a></li>
+		</ul>
+	</section>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
