--- a/index.html
+++ b/index.html
@@ -98,25 +98,21 @@
 					<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
 					<h3>傳說對決</h3>
 					<p>從國中開始玩最多的手游，一款5V5的團隊競技型遊戲，因為它我結交了很多朋友</p>
-					<ul class="actions special">
-						<li><a href="#" class="button">回頂部</a></li>
-					</ul>
+					
 				</div>
 				<div class="col-4 col-12-medium">
 					<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
 					<h3>永恆輪迴</h3>
 					<p>最近被燒到PC遊戲，玩法是大逃殺加上MOBA類的遊戲，有興趣可以一起來玩</p>
 					<ul class="actions special">
-						<li><a href="#" class="button">回頂部</a></li>
+						<li><a href="#top" class="button">回頂部</a></li>
 					</ul>
 				</div>
 				<div class="col-4 col-12-medium">
 					<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
 					<h3>網路小說</h3>
 					<p>沒有時間去圖書館時，會在網路上找找有沒有沒看過的寶藏小說</p>
-					<ul class="actions special">
-						<li><a href="#" class="button">回頂部</a></li>
-					</ul>
+		
 				</div>
 			</div>
 		</div>
@@ -462,7 +458,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<li><a href="mailto:411630543@o365.tku.edu.tw" class="icon solid alt fa-envelope" target="_blank" rel="noopener noreferrer"><span class="label">Email</span></a></li>
 		</ul>
 		<ul class="copyright">
-			<li>範本來源: <a href="http://html5up.net">HTML5 UP</a></li>
+			<li>範本來源: <a href="http://html5up.net" target="_blank" rel="noopener noreferrer">HTML5 UP</a></li>
 		</ul>
 	</section>
 
